# LocalWork

./: .gitignore
Array/: Array.hpp  main.cpp
AsyncTest/: Promise.hpp  PromiseExcept.hpp  Runner.hpp  SharedFuture.hpp  main.cpp
AtomicTest/: main.cpp
BitwiseVsNormal/: main.cpp
BubbleSort/: BubbleSort.hpp  main.cpp
CharTest/: test.cpp
ConceptsTest/: main.cpp
CustomStringFuncs/: main.cpp
DPTest/: main.cpp
DeepCopy/: DeepCopy.cpp  DeepCopy.hpp  main.cpp
DelegatingConstructors/: DelegatingConstructors.cpp  DelegatingConstructors.hpp  main.cpp
DiamondProblem/: Child.hpp  Father.hpp  Mother.hpp  Person.hpp  main.cpp
Dictionary/: Dict.hpp  main.cpp  test.txt
ExceptionTest/: main.cpp
Fibonacci/: Fibonacci.hpp  main.cpp
FirstGuiQT/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
ForTest/: main.cpp
ForVsWhileVsGoto/: main.cpp
FuncPointer/: main.cpp
FunctorTest/: FunctorTest.cpp  FunctorTest.hpp
FunctorTest2/: main.cpp
GetDigitCount/: main.cpp
IFStream/: main.cpp
IFStream2/: main.cpp
IFStreamChallenge/: FileIsNotOpenedException.hpp  ReadFile.cpp  ReadFile.hpp  Student.hpp  Students.cpp  Students.hpp  answer.txt  main.cpp
IFStream_to_OFStream/: main.cpp  text.txt  text_out.txt
IOFormating/: main.cpp
ImGUIApp/: main.cpp
InheritanceConstructor/: Base.cpp  Base.hpp  Derived.cpp  Derived.hpp  main.cpp
InheritanceTest/: Base.hpp  DerivedAsPrivate.hpp  DerivedAsProtected.hpp  DerivedAsPublic.hpp  main.cpp
Interface/: Account.cpp  Account.hpp  I_EasyPrint.cpp  (+9 more)
QTCompilerVersion/: CMakeLists.txt  main.cpp
(+186 files in other folders)
